--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "zone.js": "~0.10.3",
     "@angular/cli": "~10.0.0",
     "@angular-devkit/build-angular": "~0.1000.0",
+    "typescript": "~3.9.5",
     "@angular/compiler-cli": "~10.0.0"
   },
   "devDependencies": {
@@ -41,7 +42,6 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "tslint": "~6.1.0"
   }
 }
